<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>cn.skysailstar</groupId>
    <artifactId>kun</artifactId>
    <version>1.0.0</version>
    <packaging>pom</packaging>
    <description>琨</description>
    
    <modules>
        <module>kun-base</module>
        <module>kun-generate</module>
        <module>kun-module</module>
    </modules>

    <properties>
        <!-- JDK -->
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <!-- 编码 -->
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <!-- 公用模块-接口 -->
        <kun-base-api.version>1.0.0</kun-base-api.version>
        <!-- 公共模块-核心 -->
        <kun-base-core.version>1.0.0</kun-base-core.version>
        <!-- 公共模块-定时任务 -->
        <kun-base-job.version>1.0.0</kun-base-job.version>
        <!-- 主框架 -->
        <spring-boot.version>3.3.1</spring-boot.version>
        <!-- 微服务框架 -->
        <spring-cloud.version>2023.0.2</spring-cloud.version>
        <!-- 阿里巴巴微服务框架 -->
        <spring-cloud-alibaba.version>2021.0.4.0</spring-cloud-alibaba.version>
        <!-- Json数据处理 -->
        <fastjson2.version>2.0.38</fastjson2.version>
        <!-- 接口文档增强 -->
        <knife4j.version>4.4.0</knife4j.version>
        <!-- 数据库框架增强 -->
        <mybatis-plus.version>3.5.3.1</mybatis-plus.version>
        <mybatis-plus-generator.version>3.5.3.1</mybatis-plus-generator.version>
        <velocity.version>2.3</velocity.version>
        <!-- 工具集 -->
        <hutool.version>5.8.27</hutool.version>
        <!-- 多数据源 -->
        <druid.version>	1.2.18</druid.version>
        <!-- 安全验证 -->
        <jwt.version>0.9.1</jwt.version>
        <!-- JDK1.8包含了，后面的版本不再包含，需要手动引入 -->
        <jaxb-api.version>2.3.1</jaxb-api.version>
        <jaxb-impl.version>4.0.3</jaxb-impl.version>
        <jaxb-core.version>	4.0.3</jaxb-core.version>
        <!-- 校验 -->
        <activation.version>1.1.1</activation.version>
        <!-- 非结构化数据存储 -->
        <minio.version>8.5.4</minio.version>
        <!-- 定时任务 -->
        <xxl-job.version>2.4.0</xxl-job.version>
        <!-- 邮件 -->
        <javax-mail.version>1.6.2</javax-mail.version>
        <!-- 单元测试代码出错不影响项目的编译 -->
        <maven-surefire-plugin.version>3.1.2</maven-surefire-plugin.version>
        <!-- 汉语拼音（能够辨别多音字） -->
        <hanlp.version>portable-1.8.4</hanlp.version>
        <!-- 缓存处理 -->
        <jedis.version>5.1.0</jedis.version>
        <!-- Spring数据处理 -->
        <spring-data.version>3.3.2</spring-data.version>
    </properties>
    
    <!-- 依赖声明 -->
    <dependencyManagement>
        <dependencies>
            <!-- 公用模块-核心 -->
            <dependency>
                <groupId>cn.skysailstar</groupId>
                <artifactId>kun-base-core</artifactId>
                <version>${kun-base-core.version}</version>
            </dependency>
            
            <!-- 公用模块-接口 -->
            <dependency>
                <groupId>cn.skysailstar</groupId>
                <artifactId>kun-base-api</artifactId>
                <version>${kun-base-api.version}</version>
            </dependency>
            
            <!-- 公用模块-定时任务 -->
            <dependency>
                <groupId>cn.skysailstar</groupId>
                <artifactId>kun-base-job</artifactId>
                <version>${kun-base-job.version}</version>
            </dependency>
            
            <!-- SpringBoot 依赖配置 -->
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring-boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <!-- SpringCloud 微服务 -->
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-dependencies</artifactId>
                <version>${spring-cloud.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <!-- SpringCloud Alibaba 微服务 -->
            <dependency>
                <groupId>com.alibaba.cloud</groupId>
                <artifactId>spring-cloud-alibaba-dependencies</artifactId>
                <version>${spring-cloud-alibaba.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <!-- Swagger增强UI -->
            <dependency>
                <groupId>com.github.xiaoymin</groupId>
                <artifactId>knife4j-dependencies</artifactId>
                <version>${knife4j.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <!-- Spring Security-->
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter-security</artifactId>
                <version>${spring-boot.version}</version>
            </dependency>
            
            <!-- JSON 解析器和生成器 -->
            <dependency>
                <groupId>com.alibaba.fastjson2</groupId>
                <artifactId>fastjson2</artifactId>
                <version>${fastjson2.version}</version>
            </dependency>

            <!-- Mybatis-Plus -->
            <dependency>
                <groupId>com.baomidou</groupId>
                <artifactId>mybatis-plus-boot-starter</artifactId>
                <version>${mybatis-plus.version}</version>
            </dependency>

            <!-- Mybatis-Plus代码生成 -->
            <dependency>
                <groupId>com.baomidou</groupId>
                <artifactId>mybatis-plus-generator</artifactId>
                <version>${mybatis-plus-generator.version}</version>
            </dependency>

            <!-- Velocity模板引擎 -->
            <dependency>
                <groupId>org.apache.velocity</groupId>
                <artifactId>velocity-engine-core</artifactId>
                <version>${velocity.version}</version>
            </dependency>

            <!-- 多数据源 -->
            <dependency>
                <groupId>com.alibaba</groupId>
                <artifactId>druid-spring-boot-starter</artifactId>
                <version>${druid.version}</version>
            </dependency>
            
            <!-- JWT依赖 -->
            <dependency>
                <groupId>io.jsonwebtoken</groupId>
                <artifactId>jjwt</artifactId>
                <version>${jwt.version}</version>
            </dependency>

            <!-- JAXB API（JDK 1.8包含了，后面的版本不再包含，需要手动引入） -->
            <dependency>
                <groupId>javax.xml.bind</groupId>
                <artifactId>jaxb-api</artifactId>
                <version>${jaxb-api.version}</version>
            </dependency>
            <dependency>
                <groupId>com.sun.xml.bind</groupId>
                <artifactId>jaxb-impl</artifactId>
                <version>${jaxb-impl.version}</version>
            </dependency>
            <dependency>
                <groupId>com.sun.xml.bind</groupId>
                <artifactId>jaxb-core</artifactId>
                <version>${jaxb-core.version}</version>
            </dependency>
            <dependency>
                <groupId>javax.activation</groupId>
                <artifactId>activation</artifactId>
                <version>${activation.version}</version>
            </dependency>

            <!-- Minio -->
            <dependency>
                <groupId>io.minio</groupId>
                <artifactId>minio</artifactId>
                <version>${minio.version}</version>
            </dependency>

            <!-- xxl-job -->
            <dependency>
                <groupId>com.xuxueli</groupId>
                <artifactId>xxl-job-core</artifactId>
                <version>${xxl-job.version}</version>
            </dependency>

            <!-- Hutool -->
            <dependency>
                <groupId>cn.hutool</groupId>
                <artifactId>hutool-all</artifactId>
                <version>${hutool.version}</version>
            </dependency>

            <!-- 发送邮件包-->
            <dependency>
                <groupId>com.sun.mail</groupId>
                <artifactId>javax.mail</artifactId>
                <version>${javax-mail.version}</version>
            </dependency>

            <!-- 汉语拼音（能够辨别多音字） -->
            <dependency>
                <groupId>com.hankcs</groupId>
                <artifactId>hanlp</artifactId>
                <version>${hanlp.version}</version>
            </dependency>

            <!-- Spring数据处理 -->
            <dependency>
                <groupId>org.springframework.data</groupId>
                <artifactId>spring-data-commons</artifactId>
                <version>${spring-data.version}</version>
            </dependency>
            
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                
                <!-- 在打Jar包时会引入依赖包 -->
                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                    <version>${spring-boot.version}</version>
                    <configuration>
                        <excludes>
                            <exclude>
                                <groupId>org.projectlombok</groupId>
                                <artifactId>lombok</artifactId>
                            </exclude>
                        </excludes>
                    </configuration>
                    <executions>
                        <execution>
                            <goals>
                                <goal>repackage</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                
                <!-- 单元测试代码出错不影响项目的编译 -->
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>${maven-surefire-plugin.version}</version>
                    <configuration>
                        <skipTests>true</skipTests>
                    </configuration>
                </plugin>
                
            </plugins>
        </pluginManagement>
    </build>
</project>